[package]
name = "ded"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parking_lot = "0.12.1"
schnellru = "0.2.1"
thiserror = "1.0.40"
tokio = { version = "1.28.0", features = ["sync"] }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1.28.0", features = ["full"] }
